FIX(#650): MAKE TEXT NOT BREAK THE PAGE
Lines break to fit in div but if the field is too long, it is scrollable

--- a/static/styles/master_sidebar.css
+++ b/static/styles/master_sidebar.css
@@ -54,10 +54,6 @@
   font-size: medium;
 }
 
-#rightSectionContainer {
-  height: calc(100vh - 55px);
-}
-
 #previewContainerButtons {
   height: 200px;
 }
@@ -95,6 +91,5 @@
 }
 
 h2, h5 {
-  overflow: hidden;
-  text-overflow: ellipsis;
+  word-break: break-all;
 }
